@@ -13,6 +13,9 @@
 
     rc-daemon.sh now supports multiple cmds - partial fix for #98745
 
+    trace_dependencies gets a re-write (again) to try and solve the hanging
+    issues that many people are reporting
+
   02 Aug 2005; Roy Marples <uberlord@gentoo.org>:
 
     0 timeout now means infinite for wpa_supplicant and iwconfig wrt #90443
